<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relativeLayout"
    android:background="@color/colorWhite"
    tools:context=".ui.SearchActivity">

   <include layout="@layout/content_search"/>

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:background="@drawable/search_bg"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/search_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:padding="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:src="@mipmap/bus_seat"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_below="@+id/search_image"
            android:id="@+id/purchase_textView"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/text_book"
            android:gravity="center_vertical"
            android:maxLines="3"
            android:fontFamily="@font/lato_bold"
            android:textSize="20sp"
            android:textColor="@color/pure_white"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/purchase_textView"
            android:padding="10dp"
            android:layout_centerHorizontal="true"
            android:text="@string/welcome_msg_title"
            android:gravity="center_vertical"
            android:maxLines="3"
            android:fontFamily="@font/lato"
            android:textSize="16sp"
            android:textColor="@color/pure_white"
            android:layout_gravity="center_vertical"/>

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/first_cardView"
        android:layout_width="270dp"
        android:layout_height="240dp"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="@color/background_color"
        app:cardElevation="@dimen/card_elevation"
        app:cardCornerRadius="10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/origin_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal">
            <EditText
                android:id="@+id/origin"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_origin_black_24dp"
                android:layout_gravity="center_horizontal"
                android:gravity="start"
                android:inputType="text"
                android:fontFamily="@font/lato_bold"
                android:hint="@string/origin"
                android:textColor="@color/colorAccent"/>
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_centerInParent="true"
            android:layout_marginTop="85dp"
            android:src="@drawable/ic_front_back_black_24dp"
            android:background="@drawable/circular_button"
            android:contentDescription="@string/todo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/destination_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_gravity="center_horizontal">
            <EditText
                android:id="@+id/destination"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_destination_black_24dp"
                android:layout_gravity="center"
                android:gravity="start"
                android:inputType="text"
                android:fontFamily="@font/lato_bold"
                android:hint="@string/destination"
                android:textColor="@color/colorAccent"/>
        </android.support.design.widget.TextInputLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_below="@+id/first_cardView"
        android:id="@+id/card_pick_date"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/spacing_large"
        app:cardBackgroundColor="@color/materialGreen"
        app:cardCornerRadius="@dimen/spacing_normal"
        app:cardElevation="@dimen/z_card"
        android:onClick="pickDate">

        <io.travelaid.widget.BaselineGridTextView
            android:id="@+id/display_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/padding_normal"
            android:drawableStart="@drawable/ic_event"
            android:padding="@dimen/padding_normal"
            android:fontFamily="@font/lato"
            android:text="27/8/2018"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"/>

    </android.support.v7.widget.CardView>

    <Button
        android:layout_below="@+id/card_pick_date"
        android:id="@+id/search_button"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_centerHorizontal="true"
        android:text="@string/text_search"
        android:textColor="@color/pure_white"
        android:fontFamily="@font/lato_bold"
        android:onClick="search"
        android:background="@drawable/round_button_green"/>

</RelativeLayout>